<resources>
    <string name="app_name">BetterStravaDroid</string>
    <string name="connexion">CONNEXION</string>
    <string name="icone_de_l_application">Icône de l\'application</string>
    <string name="se_connecter">Se connecter</string>
    <string name="creer_un_nouveau_compte"><u>Créer un nouveau compte</u></string>
    <string name="courriel">Courriel</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="inscription">INSCRIPTION</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="se_connecter_underline"><u>Se connecter</u></string>
    <string name="deja_inscrit">Déjà inscrit ?</string>
    <string name="repeter_le_mot_de_passe">Répéter le mot de passe</string>
</resources>