<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageConnexion">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineGradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/gradient_login"
        app:layout_constraintBottom_toTopOf="@+id/guidelineGradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/RoundedRectBottom"

        />


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerInside"
        android:src="@drawable/betterstrava_logo"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineGradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/icone_de_l_application" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_connexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinePopup">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="64dp">

            <TextView
                android:id="@+id/tv_connexion"
                style="@style/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connexion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/loginEditText"
                android:id="@+id/et_email"
                android:layout_width="match_parent"

                android:layout_marginTop="19dp"

                android:paddingStart="8dp"
                android:drawableStart="@drawable/mail"

                app:layout_constraintTop_toBottomOf="@+id/tv_connexion"
                android:background="@drawable/border_input"
                android:hint="@string/courriel"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                />

            <EditText
                style="@style/loginEditText"
                android:id="@+id/et_mot_de_passe"

                android:layout_width="match_parent"

                android:layout_marginTop="9dp"

                android:drawableStart="@drawable/iconlock"
                android:paddingStart="8dp"

                app:layout_constraintTop_toBottomOf="@+id/et_email"
                android:background="@drawable/border_input"
                android:hint="@string/mot_de_passe"
                android:autofillHints="password"
                android:inputType="textPassword"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#4478c2"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_connexion">

        <Button
            android:id="@+id/btn_connexion"
            android:layout_width="212dp"
            android:layout_height="48dp"
            android:background="@color/transparent"
            android:fontFamily="@font/inter_regular"
            android:text="@string/se_connecter"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:onClick="boutonConnexion"
            />

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/creer_un_nouveau_compte"
        android:textColor="@color/black"
        android:padding="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:fontFamily="@font/inter_regular"
        android:textSize="14sp"
        android:minHeight="0dp"
        android:onClick="goToInscription"
        />







</androidx.constraintlayout.widget.ConstraintLayout>